# bsc-mlir

./: CLAUDE.md  flake.nix
bsc-rust/: .gitignore  Cargo.toml  REFACTOR_PLAN.md  TODO_AUDIT.md
bsc-rust/crates/bsc-cli/: Cargo.toml
bsc-rust/crates/bsc-cli/src/: main.rs
bsc-rust/crates/bsc-diagnostics/: Cargo.toml
bsc-rust/crates/bsc-diagnostics/src/: lib.rs
bsc-rust/crates/bsc-export/: Cargo.toml
bsc-rust/crates/bsc-export/src/: lib.rs
bsc-rust/crates/bsc-iconv/: Cargo.toml
bsc-rust/crates/bsc-iconv/src/: lib.rs
bsc-rust/crates/bsc-incremental/: Cargo.toml
bsc-rust/crates/bsc-incremental/src/: lib.rs
bsc-rust/crates/bsc-lexer/: Cargo.toml
bsc-rust/crates/bsc-lexer-bsv/: Cargo.toml
bsc-rust/crates/bsc-lexer-bsv/src/: lib.rs  token.rs
bsc-rust/crates/bsc-lexer-classic/: Cargo.toml
bsc-rust/crates/bsc-lexer-classic/src/: lib.rs  token.rs
bsc-rust/crates/bsc-lexer/src/: lib.rs  token.rs
bsc-rust/crates/bsc-lsp/: Cargo.toml
bsc-rust/crates/bsc-lsp/src/: lib.rs  main.rs
bsc-rust/crates/bsc-parser-bsv/: Cargo.toml
bsc-rust/crates/bsc-parser-bsv/src/: definitions.rs  expressions.rs  imperative.rs  imperative_parsing.rs  lib.rs  operators.rs  package.rs  patterns.rs  types.rs
bsc-rust/crates/bsc-parser-classic/: Cargo.toml
bsc-rust/crates/bsc-parser-classic/src/: layout.rs  lib.rs
bsc-rust/crates/bsc-parser-treesitter/: Cargo.toml
bsc-rust/crates/bsc-parser-treesitter/src/: lib.rs
bsc-rust/crates/bsc-preprocess/: Cargo.toml
bsc-rust/crates/bsc-preprocess/src/: lib.rs
bsc-rust/crates/bsc-stdlib/: Cargo.toml
bsc-rust/crates/bsc-stdlib/src/: lib.rs
bsc-rust/crates/bsc-symtab/: Cargo.toml
bsc-rust/crates/bsc-symtab/src/: lib.rs
bsc-rust/crates/bsc-syntax/: Cargo.toml
bsc-rust/crates/bsc-syntax/src/: csyntax.rs  csyntax_display.rs  id.rs  isyntax.rs  lib.rs  literal.rs  vmodinfo.rs  vmodinfo_display.rs
bsc-rust/crates/bsc-test-utils/: Cargo.toml
bsc-rust/crates/bsc-test-utils/src/: lib.rs
bsc-rust/crates/bsc-typecheck/: Cargo.toml
bsc-rust/crates/bsc-typecheck/src/: context.rs  infer.rs  lib.rs
bsc-rust/crates/bsc-types/: Cargo.toml
bsc-rust/crates/bsc-types/src/: lib.rs  subst.rs  ty.rs  unify.rs
nix/: overlay.nix
nix/pkgs/: bsc.nix
