[workspace]
resolver = "2"
members = [
    "crates/bsc-diagnostics",
    "crates/bsc-syntax",
    "crates/bsc-lexer-classic",
    "crates/bsc-lexer-bsv",
    "crates/bsc-preprocess",
    "crates/bsc-parser-classic",
    "crates/bsc-parser-bsv",
    "crates/bsc-test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/bsc-rust"
rust-version = "1.85"

[workspace.dependencies]
# Workspace crates
bsc-diagnostics = { path = "crates/bsc-diagnostics" }
bsc-syntax = { path = "crates/bsc-syntax" }
bsc-lexer-classic = { path = "crates/bsc-lexer-classic" }
bsc-lexer-bsv = { path = "crates/bsc-lexer-bsv" }
bsc-preprocess = { path = "crates/bsc-preprocess" }
bsc-parser-classic = { path = "crates/bsc-parser-classic" }
bsc-parser-bsv = { path = "crates/bsc-parser-bsv" }
bsc-test-utils = { path = "crates/bsc-test-utils" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Arbitrary precision integers (for Haskell Integer compatibility)
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Utilities
smol_str = "0.3"
logos = "0.15"

# Parser combinator library
chumsky = "0.12"
ariadne = "0.5"

# Testing (for differential tests)
walkdir = "2.5"
rayon = "1.10"
rand = "0.8"
pretty_assertions = "1.4"

[workspace.lints.rust]
unsafe_code = "deny"
