[package]
name = "bsc-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Error handling and diagnostics for BSC Rust frontend"

[dependencies]
thiserror.workspace = true
miette.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "miette/serde"]

[lints]
workspace = true
