[package]
name = "bsc-lexer-bsv"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lexer for BSV (SystemVerilog-like) syntax (mirrors SystemVerilogScanner.lhs)"

[dependencies]
bsc-diagnostics.workspace = true
bsc-syntax.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
smol_str.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
