[package]
name = "bsc-lexer-classic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lexer for Classic Bluespec syntax (mirrors Lex.hs)"

[dependencies]
bsc-diagnostics.workspace = true
bsc-syntax.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
smol_str.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
