[package]
name = "bsc-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LSP server for Bluespec"

[[bin]]
name = "bsc-lsp"
path = "src/main.rs"

[dependencies]
bsc-diagnostics.workspace = true
bsc-incremental.workspace = true
bsc-syntax.workspace = true
tower-lsp.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
